--- a/.rvmrc
+++ b/.rvmrc
@@ -4,7 +4,7 @@
 # development environment upon cd'ing into the directory
 
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional.
-environment_id="1.9.3@beluga"
+environment_id="ruby-1.9.3-p125-perf@beluga"
 
 #
 # First we attempt to load the desired environment directly from the environment
